# CodeCrafterShellProject

./: .gitignore  CMakeLists.txt  cmake_install.cmake
.cache/clangd/index/: main.cpp.701D1B6604444D2A.idx
src/: main.cpp
